--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
   </div>
   <div id="sloop">
     <figure>
-      <img src="home1.jpg">
-      <img src="home2.jpg">
-      <img src="home3.jpg">
-      <img src="home4.jpg">
-      <img src="home5.jpg">
+      <img src="/images/home1.jpg">
+      <img src="/images/home2.jpg">
+      <img src="/images/home3.jpg">
+      <img src="/images/home4.jpg">
+      <img src="/images/home5.jpg">
     </figure>
   </div>
   <div class="navi-bar">
@@ -173,8 +173,8 @@
 
   <div class="baner">
     <figure class="banerimg">
-      <img src="baner1.jpg">
-      <img src="baner2.jpg">
+      <img src="/images/baner1.jpg">
+      <img src="/images/baner2.jpg">
     </figure>
   </div>
 
@@ -196,48 +196,48 @@
       <div class="image-slider">
         <span class="slider-span" id="slider-span1"></span>
         <div class="slides-div" id="slide-1">
-          <img src="fs1.jpg" alt="" class="img" id="img1">
+          <img src="/images/fs1.jpg" alt="" class="img" id="img1">
           <a href="#slider-span1" class="button" id="button-1"></a>
           <h2>Sale</h2>
         </div>
         <div class="slides-div" id="slide-2">
-          <img src="fs2.jpg" alt="" class="img" id="img2">
+          <img src="/images/fs2.jpg" alt="" class="img" id="img2">
           <a href="#slider-span2" class="button" id="button-2"></a>
           <h2>Men</h2>
 
         </div>
         <div class="slides-div" id="slide-3">
-          <img src="fs3.jpg" alt="" class="img" id="img3">
+          <img src="/images/fs3.jpg" alt="" class="img" id="img3">
           <a href="#slider-span3" class="button" id="button-3"></a>
           <h2>Women</h2>
         </div>
         <div class="slides-div" id="slide-4">
-          <img src="fs4.jpg" alt="" class="img" id="img4">
+          <img src="/images/fs4.jpg" alt="" class="img" id="img4">
           <a href="#slider-span4" class="button" id="button-4"></a>
           <h2>Kids</h2>
         </div>
         <div class="slides-div" id="slide-5">
-          <img src="fs5.jpg" alt="" class="img" id="img5">
+          <img src="/images/fs5.jpg" alt="" class="img" id="img5">
           <a href="#slider-span5" class="button" id="button-5"></a>
           <h2>couple</h2>
         </div>
         <div class="slides-div" id="slide-6">
-          <img src="fs6.jpg" alt="" class="img" id="img6">
+          <img src="/images/fs6.jpg" alt="" class="img" id="img6">
           <a href="#slider-span6" class="button" id="button-6"></a>
           <h2>Luxe</h2>
         </div>
         <div class="slides-div" id="slide-7">
-          <img src="fs7.jpg" alt="" class="img" id="img7">
+          <img src="/images/fs7.jpg" alt="" class="img" id="img7">
           <a href="#slider-span7" class="button" id="button-7"></a>
           <h2>Clocks</h2>
         </div>
         <div class="slides-div" id="slide-8">
-          <img src="fs8.jpg" alt="" class="img" id="img8">
+          <img src="/images/fs8.jpg" alt="" class="img" id="img8">
           <a href="#slider-span8" class="button" id="button-8"></a>
           <h2>Smart</h2>
         </div>
         <div class="slides-div" id="slide-9">
-          <img src="fs9.jpg" alt="" class="img" id="img9">
+          <img src="/images/fs9.jpg" alt="" class="img" id="img9">
           <a href="#slider-span9" class="button" id="button-9"></a>
           <h2>Raga</h2>
         </div>
@@ -255,7 +255,7 @@
 
     <div class="products">
       <div class="items">
-        <img src="fr1.jpg">
+        <img src="/images/fr1.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -274,7 +274,7 @@
 
       </div>
       <div class="items">
-        <img src="fr2.jpg">
+        <img src="/images/fr2.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr3.jpg">
+        <img src="/images/fr3.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -310,7 +310,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr4.jpg">
+        <img src="/images/fr4.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -328,7 +328,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr5.jpg">
+        <img src="/images/fr5.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -346,7 +346,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr6.jpg">
+        <img src="/images/fr6.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -364,7 +364,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr7.jpg">
+        <img src="/images/fr7.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -382,7 +382,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr8.jpg">
+        <img src="/images/fr8.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -400,7 +400,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="fr9.jpg">
+        <img src="/images/fr9.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -427,11 +427,11 @@
 
       <div class="products-1">
         <div class="items-container">
-          <img src="arrival1.jpg" alt="">
-          <img src="arrival2.jpg" alt="">
-          <img src="arrival3.jpg" alt="">
-          <img src="arrival4.jpg" alt="">
-          <img src="arrival5.jpg" alt="" class="photo">
+          <img src="/images/arrival1.jpg" alt="">
+          <img src="/images/arrival2.jpg" alt="">
+          <img src="/images/arrival3.jpg" alt="">
+          <img src="/images/arrival4.jpg" alt="">
+          <img src="/images/arrival5.jpg" alt="" class="photo">
         </div>
 
       </div>
@@ -447,7 +447,7 @@
     <div class="products">
 
       <div class="items">
-        <img src="img1.jpg">
+        <img src="/images/img1.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -467,7 +467,7 @@
       </div>
 
       <div class="items">
-        <img src="2row1.jpg">
+        <img src="/images/2row1.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -486,7 +486,7 @@
 
       </div>
       <div class="items">
-        <img src="2row2.jpg">
+        <img src="/images/2row2.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -504,7 +504,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="2row3.jpg">
+        <img src="/images/2row3.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -522,7 +522,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="2row4.jpg">
+        <img src="/images/2row4.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -540,7 +540,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="2row5.jpg">
+        <img src="/images/2row5.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -558,7 +558,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="2row6.jpg">
+        <img src="/images/2row6.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -576,7 +576,7 @@
         </div>
       </div>
       <div class="items">
-        <img src="2row7.jpg">
+        <img src="/images/2row7.jpg">
         <div class="heart-icon">
           <i class="bx bx-heart"></i>
         </div>
@@ -602,22 +602,22 @@
       <h1>SHOP BY BRANDS</h1>
     </div>
     <div class="brands">
-      <img src="brand1.jpg" alt="">
-      <img src="brand2.jpg" alt="">
-      <img src="brand3.jpg" alt="">
-      <img src="brand4.jpg" alt="">
+      <img src="/images/brand1.jpg" alt="">
+      <img src="/images/brand2.jpg" alt="">
+      <img src="/images/brand3.jpg" alt="">
+      <img src="/images/brand4.jpg" alt="">
     </div>
     <div class="brands-1">
-      <img src="brand5.jpg" alt="">
-      <img src="brand6.jpg" alt="">
-      <img src="brand7.jpg" alt="">
-      <img src="brand8.jpg" alt="">
+      <img src="/images/brand5.jpg" alt="">
+      <img src="/images/brand6.jpg" alt="">
+      <img src="/images/brand7.jpg" alt="">
+      <img src="/images/brand8.jpg" alt="">
     </div>
     <div class="brands-2">
-      <img src="brand9.jpg" alt="">
-      <img src="brand10.jpg" alt="">
-      <img src="brand11.jpg" alt="">
-      <img src="brand12.jpg" alt="">
+      <img src="/images/brand9.jpg" alt="">
+      <img src="/images/brand10.jpg" alt="">
+      <img src="/images/brand11.jpg" alt="">
+      <img src="/images/brand12.jpg" alt="">
     </div>
 
   </section>
@@ -629,22 +629,22 @@
     </div>
     <div class="time-images">
       <figure class="img1">
-        <img src="time1.jpg" alt="">
+        <img src="/images/time1.jpg" alt="">
       </figure>
       <figure class="img2">
-        <img src="time2.jpg" alt="">
+        <img src="/images/time2.jpg" alt="">
       </figure>
       <figure class="img3">
-        <img src="time3.jpg" alt="">
+        <img src="/images/time3.jpg" alt="">
       </figure>
       <figure class="img4">
-        <img src="time4.jpg" alt="">
+        <img src="/images/time4.jpg" alt="">
       </figure>
       <figure class="img5">
-        <img src="time5.jpg" alt="">
+        <img src="/images/time5.jpg" alt="">
       </figure>
 
-    </div>
+    </div>/images/
   </section>
 
   <section>
@@ -653,19 +653,19 @@
     </div>
     <div class="products">
       <div class="items">
-        <img src="move1.jpg">
+        <img src="/images/move1.jpg">
       </div>
       <div class="items">
-        <img src="move2.jpg">
+        <img src="/images/move2.jpg">
       </div>
       <div class="items">
-        <img src="move3.jpg">
+        <img src="/images/move3.jpg">
       </div>
       <div class="items">
-        <img src="move4.jpg">
+        <img src="/images/move4.jpg">
       </div>
       <div class="items">
-        <img src="move5.jpg">
+        <img src="/images/move5.jpg">
       </div>
 
     </div>
@@ -676,28 +676,28 @@
     </div>
     <div class="collect">
       <figure class="collect1">
-        <img src="grid1.jpg" alt="">
+        <img src="/images/grid1.jpg" alt="">
       </figure>
       <figure class="collect2">
-        <img src="grid2.jpg" alt="">
+        <img src="/images/grid2.jpg" alt="">
       </figure>
       <figure class="collect3">
-        <img src="grid3.jpg" alt="">
+        <img src="/images/grid3.jpg" alt="">
       </figure>
       <figure class="collect4">
-        <img src="grid4.jpg" alt="">
+        <img src="/images/grid4.jpg" alt="">
       </figure>
       <figure class="collect5">
-        <img src="grid5.jpg" alt="">
+        <img src="/images/grid5.jpg" alt="">
       </figure>
       <figure class="collect6">
-        <img src="grid6.jpg" alt="">
+        <img src="/images/grid6.jpg" alt="">
       </figure>
       <figure class="collect7">
-        <img src="grid7.jpg" alt="">
+        <img src="/images/grid7.jpg" alt="">
       </figure>
       <figure class="collect8">
-        <img src="grid8.jpg" alt="">
+        <img src="/images/grid8.jpg" alt="">
       </figure>
     </div>
   </section>
