--- a/index.html
+++ b/index.html
@@ -177,75 +177,54 @@
       <img src="images/baner2.jpg">
     </figure>
   </div>
+  <section class="wrapper-slider">
 
-  <section class="slider-container">
-    <div class="first-line">
-      <h1> THE BEST WAY TO BUY THE PRODUCTS YOU LOVE</h1>
+    <div class="header-section">
+        <h1>THE BEST WAY TO BUY THE PRODUCTS YOU LOVE</h1>
     </div>
 
-    <div class="slide-container">
-      <span class="slider-span" id="slider-span2"></span>
-      <span class="slider-span" id="slider-span3"></span>
-      <span class="slider-span" id="slider-span4"></span>
-      <span class="slider-span" id="slider-span5"></span>
-      <span class="slider-span" id="slider-span6"></span>
-      <span class="slider-span" id="slider-span7"></span>
-      <span class="slider-span" id="slider-span8"></span>
-      <span class="slider-span" id="slider-span9"></span>
+    <div id="slider">
+        <input type="radio" name="slider" id="s1">
+        <input type="radio" name="slider" id="s2">
+        <input type="radio" name="slider" id="s3" checked> 
+        <input type="radio" name="slider" id="s4">
+        <input type="radio" name="slider" id="s5">
 
-      <div class="image-slider">
-        <span class="slider-span" id="slider-span1"></span>
-        <div class="slides-div" id="slide-1">
-          <img src="images/fs1.jpg" alt="" class="img" id="img1">
-          <a href="#slider-span1" class="button" id="button-1"></a>
-          <h2>Sale</h2>
-        </div>
-        <div class="slides-div" id="slide-2">
-          <img src="images/fs2.jpg" alt="" class="img" id="img2">
-          <a href="#slider-span2" class="button" id="button-2"></a>
-          <h2>Men</h2>
+        <label for="s1" id="slide1"></label>
+        <label for="s2" id="slide2"></label>
+        <label for="s3" id="slide3"></label>
+        <label for="s4" id="slide4"></label>
+        <label for="s5" id="slide5"></label>
 
+        <!-- Content sections -->
+        <div class="testimonial-content content1">
+            <h1>MEN</h1>
+            <p class="container">A Titan watch adds instant style to a man's look, combining elegance with practicality.
+            </p>
         </div>
-        <div class="slides-div" id="slide-3">
-          <img src="images/fs3.jpg" alt="" class="img" id="img3">
-          <a href="#slider-span3" class="button" id="button-3"></a>
-          <h2>Women</h2>
+        <div class="testimonial-content content2">
+            <h1>Women</h1>
+            <p class="container">A Titan watch enhances a woman's elegance, blending style with function. It's a timeless accessory for any occasion.
+            </p>
         </div>
-        <div class="slides-div" id="slide-4">
-          <img src="images/fs4.jpg" alt="" class="img" id="img4">
-          <a href="#slider-span4" class="button" id="button-4"></a>
-          <h2>Kids</h2>
+        <div class="testimonial-content content3">
+            <h1>KIDS</h1>
+            <p class="container">Two kids, excited and playful, wear their Titan watches, feeling stylish and grown-up as they race against time on their little adventures.
+            </p>
         </div>
-        <div class="slides-div" id="slide-5">
-          <img src="images/fs5.jpg" alt="" class="img" id="img5">
-          <a href="#slider-span5" class="button" id="button-5"></a>
-          <h2>couple</h2>
+        <div class="testimonial-content content4">
+            <h1>COUPLE</h1>
+            <p class="container">A couple shares a moment, each wearing a Titan watch, symbolizing their timeless love and perfect harmony.
+            </p>
         </div>
-        <div class="slides-div" id="slide-6">
-          <img src="images/fs6.jpg" alt="" class="img" id="img6">
-          <a href="#slider-span6" class="button" id="button-6"></a>
-          <h2>Luxe</h2>
+        <div class="testimonial-content content5">
+            <h1>TITAN</h1>
+            <p class="container">Titan watches symbolize elegance and reliability, inspiring confidence while reminding us that time is precious. Each timepiece celebrates cherished moments and positivity.
+            </p>
         </div>
-        <div class="slides-div" id="slide-7">
-          <img src="images/fs7.jpg" alt="" class="img" id="img7">
-          <a href="#slider-span7" class="button" id="button-7"></a>
-          <h2>Clocks</h2>
-        </div>
-        <div class="slides-div" id="slide-8">
-          <img src="images/fs8.jpg" alt="" class="img" id="img8">
-          <a href="#slider-span8" class="button" id="button-8"></a>
-          <h2>Smart</h2>
-        </div>
-        <div class="slides-div" id="slide-9">
-          <img src="images/fs9.jpg" alt="" class="img" id="img9">
-          <a href="#slider-span9" class="button" id="button-9"></a>
-          <h2>Raga</h2>
-        </div>
-      </div>
     </div>
-
-  </section>
-
+</section>
+  
 
   <section class="recom-container">
     <div class="recom">
@@ -423,7 +402,6 @@
   <section>
     <div class="new">
       <h1>NEW ARRIVAL</h1>
-      <h2>NEW ARRIVAL</h2>
 
       <div class="products-1">
         <div class="items-container">
@@ -431,7 +409,7 @@
           <img src="images/arrival2.jpg" alt="">
           <img src="images/arrival3.jpg" alt="">
           <img src="images/arrival4.jpg" alt="">
-          <img src="images/arrival5.jpg" alt="" class="photo">
+          <!-- <img src="images/arrival5.jpg" alt="" class="photo"> -->
         </div>
 
       </div>
